[gd_scene load_steps=33 format=3 uid="uid://bnx4kbj5rc2jw"]

[ext_resource type="Script" path="res://src/game/Bear/bear.gd" id="1_01efg"]
[ext_resource type="Shader" path="res://src/shaders/outline.gdshader" id="1_50dmx"]
[ext_resource type="Texture2D" uid="uid://cx476j0qmkpmw" path="res://assets/sprites/bear-hop.png" id="3_p653d"]
[ext_resource type="Texture2D" uid="uid://dg1rsa8ixe450" path="res://assets/sprites/bear-sad-happy.png" id="4_bxnbb"]
[ext_resource type="Texture2D" uid="uid://bvxj0se5tes4t" path="res://assets/sprites/bear-hand-2.png" id="6_2qmwo"]
[ext_resource type="Texture2D" uid="uid://dalt1v1gn2o0q" path="res://assets/sprites/droplet.png" id="7_clnmm"]
[ext_resource type="Texture2D" uid="uid://r5lvuabgtt1h" path="res://assets/sprites/crosshair026.png" id="7_q4cll"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ewhnb"]
shader = ExtResource("1_50dmx")
shader_parameter/outline_color = Color(0.223529, 0.203922, 0.341176, 1)
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/swap_color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/shadow_threshold = 80.0
shader_parameter/pattern = 0
shader_parameter/blink_interval = 1.0
shader_parameter/can_blink = false
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ii0sh"]
atlas = ExtResource("4_bxnbb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc1n7"]
atlas = ExtResource("3_p653d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxy0b"]
atlas = ExtResource("3_p653d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtc5d"]
atlas = ExtResource("3_p653d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sutje"]
atlas = ExtResource("3_p653d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pe1c"]
atlas = ExtResource("3_p653d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_365ap"]
atlas = ExtResource("3_p653d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qio3p"]
atlas = ExtResource("3_p653d")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocnov"]
atlas = ExtResource("3_p653d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmeio"]
atlas = ExtResource("3_p653d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktfog"]
atlas = ExtResource("3_p653d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg2og"]
atlas = ExtResource("3_p653d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eit6"]
atlas = ExtResource("3_p653d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqo2j"]
atlas = ExtResource("4_bxnbb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgp06"]
atlas = ExtResource("4_bxnbb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1lp2"]
atlas = ExtResource("4_bxnbb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wavb8"]
atlas = ExtResource("4_bxnbb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ifr2"]
atlas = ExtResource("4_bxnbb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_24dtj"]
atlas = ExtResource("4_bxnbb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qy6p8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii0sh")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc1n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxy0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtc5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sutje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pe1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_365ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qio3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocnov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmeio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktfog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg2og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eit6")
}],
"loop": true,
"name": &"idle",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqo2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgp06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1lp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wavb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ifr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24dtj")
}],
"loop": true,
"name": &"sad",
"speed": 3.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vl4qa"]
shader = ExtResource("1_50dmx")
shader_parameter/outline_color = Color(0.223529, 0.203922, 0.341176, 1)
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/swap_color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/shadow_threshold = 80.0
shader_parameter/pattern = 0
shader_parameter/blink_interval = 1.0
shader_parameter/can_blink = false
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8nne"]
resource_local_to_scene = true
shader = ExtResource("1_50dmx")
shader_parameter/outline_color = Color(0.223529, 0.203922, 0.341176, 1)
shader_parameter/fill_color = Color(0.698039, 0.505882, 0.27451, 1)
shader_parameter/swap_color = Color(0.447059, 0.278431, 0.109804, 1)
shader_parameter/width = 1.0
shader_parameter/shadow_threshold = 80.0
shader_parameter/pattern = 0
shader_parameter/blink_interval = 1.0
shader_parameter/can_blink = false
shader_parameter/inside = false
shader_parameter/add_margins = false

[sub_resource type="CircleShape2D" id="CircleShape2D_aoqxc"]
radius = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_k4ua3"]
emission_shape = 1
emission_sphere_radius = 4.0
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 30.0
gravity = Vector3(0, 98, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.5

[node name="Bear" type="CharacterBody2D"]
z_index = 2
z_as_relative = false
script = ExtResource("1_01efg")

[node name="Body" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_ewhnb")
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_qy6p8")
animation = &"idle"
autoplay = "idle"

[node name="Hands" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="HandR" type="Sprite2D" parent="Hands"]
texture_filter = 1
material = SubResource("ShaderMaterial_vl4qa")
position = Vector2(8, 4)
texture = ExtResource("6_2qmwo")
metadata/_edit_lock_ = true

[node name="Holding" type="Node2D" parent="Hands"]
metadata/_edit_lock_ = true

[node name="HandL" type="Sprite2D" parent="Hands"]
texture_filter = 1
material = SubResource("ShaderMaterial_r8nne")
position = Vector2(-8, 4)
texture = ExtResource("6_2qmwo")
metadata/_edit_lock_ = true

[node name="Indicator" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(-24, 0)
scale = Vector2(0.4, 0.4)
texture = ExtResource("7_q4cll")

[node name="LockTimer" type="Timer" parent="."]
one_shot = true

[node name="PickupDetector" type="Node2D" parent="."]

[node name="UP" type="Area2D" parent="PickupDetector"]
position = Vector2(0, -24)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector/UP"]
shape = SubResource("CircleShape2D_aoqxc")
debug_color = Color(1, 0, 0, 0.490196)

[node name="DOWN" type="Area2D" parent="PickupDetector"]
position = Vector2(0, 24)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector/DOWN"]
shape = SubResource("CircleShape2D_aoqxc")
debug_color = Color(1, 0, 0, 0.490196)

[node name="LEFT" type="Area2D" parent="PickupDetector"]
position = Vector2(-24, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector/LEFT"]
shape = SubResource("CircleShape2D_aoqxc")
debug_color = Color(1, 0, 0, 0.490196)

[node name="RIGHT" type="Area2D" parent="PickupDetector"]
position = Vector2(24, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector/RIGHT"]
shape = SubResource("CircleShape2D_aoqxc")
debug_color = Color(1, 0, 0, 0.490196)

[node name="Sweat" type="GPUParticles2D" parent="."]
texture_filter = 1
position = Vector2(0, -14)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_k4ua3")
texture = ExtResource("7_clnmm")
lifetime = 3.0
one_shot = true
speed_scale = 1.5
explosiveness = 0.6
randomness = 1.0
